// Copyright (C) 2019 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";
option go_package = "storj.io/common/pb";

package metainfo;

import "encryption.proto";
import "gogo.proto";
import "google/protobuf/timestamp.proto";
import "node.proto";
import "pointerdb.proto";
import "orders.proto";

// NOTE!!!
// * If someone will add stream_id or segment_id to existing or new message in this protobuf
//   then Batch method (satellite/metainfo/batch.go) needs to be updated as well

// Metainfo it's a satellite RPC service.
service Metainfo {
    // Bucket
    rpc CreateBucket(BucketCreateRequest) returns (BucketCreateResponse);
    rpc GetBucket(BucketGetRequest) returns (BucketGetResponse);
    rpc DeleteBucket(BucketDeleteRequest) returns (BucketDeleteResponse);
    rpc ListBuckets(BucketListRequest) returns (BucketListResponse);

    // Object
    rpc BeginObject(ObjectBeginRequest) returns (ObjectBeginResponse);
    rpc CommitObject(ObjectCommitRequest) returns (ObjectCommitResponse);
    rpc GetObject(ObjectGetRequest) returns (ObjectGetResponse);
    rpc GetPendingObjects(GetPendingObjectsRequest) returns (GetPendingObjectsResponse);
    rpc ListObjects(ObjectListRequest) returns (ObjectListResponse);
    rpc BeginDeleteObject(ObjectBeginDeleteRequest) returns (ObjectBeginDeleteResponse);
    rpc FinishDeleteObject(ObjectFinishDeleteRequest) returns (ObjectFinishDeleteResponse);
    rpc GetObjectIPs(ObjectGetIPsRequest) returns (ObjectGetIPsResponse);
    rpc ListPendingObjectStreams(ListPendingObjectStreamsRequest) returns (ListPendingObjectStreamsResponse);

    rpc BeginSegment(SegmentBeginRequest) returns (SegmentBeginResponse);
    rpc CommitSegment(SegmentCommitRequest) returns (SegmentCommitResponse);
    rpc MakeInlineSegment(SegmentMakeInlineRequest) returns (SegmentMakeInlineResponse);
    rpc BeginDeleteSegment(SegmentBeginDeleteRequest) returns (SegmentBeginDeleteResponse);
    rpc FinishDeleteSegment(SegmentFinishDeleteRequest) returns (SegmentFinishDeleteResponse);
    rpc ListSegments(SegmentListRequest) returns (SegmentListResponse);
    rpc DownloadSegment(SegmentDownloadRequest) returns (SegmentDownloadResponse);

    rpc Batch(BatchRequest) returns (BatchResponse);

    rpc ProjectInfo(ProjectInfoRequest) returns (ProjectInfoResponse);
    rpc RevokeAPIKey(RevokeAPIKeyRequest) returns (RevokeAPIKeyResponse);
}

message RequestHeader {
    bytes api_key = 1;
    bytes user_agent = 2;
}

message Bucket {
    bytes                  name = 1;
    encryption.CipherSuite path_cipher = 2;

    google.protobuf.Timestamp created_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];

    int64                           default_segment_size = 4;
    pointerdb.RedundancyScheme      default_redundancy_scheme = 5;
    encryption.EncryptionParameters default_encryption_parameters = 6;
    bytes                           partner_id = 7;
}

message BucketListItem {
    bytes             name = 1;

    google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message BucketCreateRequest {
    RequestHeader header = 15;

    bytes                  name = 1;
    encryption.CipherSuite path_cipher = 2;

    int64                           default_segment_size = 3;
    pointerdb.RedundancyScheme      default_redundancy_scheme = 4;
    encryption.EncryptionParameters default_encryption_parameters = 5;
    bytes                           partner_id = 6;
}

message BucketCreateResponse {
    Bucket bucket = 1;
}

message BucketGetRequest {
    RequestHeader header = 15;

    bytes name = 1;
}

message BucketGetResponse {
    Bucket bucket = 1;
}

message BucketDeleteRequest {
    RequestHeader header = 15;

    bytes name = 1;
    bool  delete_all = 2;
}

message BucketDeleteResponse {
    Bucket bucket = 1;

    int64 deleted_objects_count = 2;
}

message BucketListRequest {
    RequestHeader header = 15;

    bytes cursor = 1;
    int32 limit = 2;
    int32 direction = 3;
}

message BucketListResponse {
  repeated BucketListItem items = 1;
  bool                    more = 2;
}

message BucketSetAttributionRequest {
    RequestHeader header = 15;

    bytes name = 1;
    bytes partner_id = 2;
}

message BucketSetAttributionResponse {
}

message AddressedOrderLimit {
    orders.OrderLimit limit = 1;
    node.NodeAddress storage_node_address = 2;
}

message ProjectInfoRequest {
    RequestHeader header = 15;
}

message ProjectInfoResponse {
    bytes project_salt = 1;
}

//---------------------------
// Object
//---------------------------

message Object {
    enum Status {
        INVALID    = 0;
        UPLOADING  = 1;
        COMMITTING = 2;
        COMMITTED  = 3;
        DELETING   = 4;
    }

    bytes  bucket         = 1;
    bytes  encrypted_path = 2;
    int32  version        = 3;
    Status status         = 4;

    bytes  stream_id = 5 [(gogoproto.customtype) = "StreamID", (gogoproto.nullable) = false];

    google.protobuf.Timestamp created_at = 6 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    google.protobuf.Timestamp status_at  = 7 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    google.protobuf.Timestamp expires_at = 8 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];

    bytes encrypted_metadata_nonce         = 9 [(gogoproto.customtype) = "Nonce", (gogoproto.nullable) = false];
    bytes encrypted_metadata               = 10;
    bytes encrypted_metadata_encrypted_key = 17;

    int64                           fixed_segment_size    = 11;
    pointerdb.RedundancyScheme      redundancy_scheme     = 12;
    encryption.EncryptionParameters encryption_parameters = 13;

    int64 total_size  = 14; // total size of object
    int64 inline_size = 15; // size of inline part of object
    int64 remote_size = 16; // size of remote part of object
    int64 plain_size  = 18;
}

message ObjectBeginRequest {
    RequestHeader header = 15;

    bytes  bucket = 1;
    bytes  encrypted_path = 2;
    int32  version = 3;

    google.protobuf.Timestamp expires_at = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];

    pointerdb.RedundancyScheme      redundancy_scheme = 7; // can be zero
    encryption.EncryptionParameters encryption_parameters = 8; // can be zero
}

message ObjectBeginResponse {
    bytes  bucket = 1;
    bytes  encrypted_path = 2;
    int32  version = 3;

    bytes  stream_id = 4 [(gogoproto.customtype) = "StreamID", (gogoproto.nullable) = false];

    pointerdb.RedundancyScheme      redundancy_scheme = 5;
    encryption.EncryptionParameters encryption_parameters = 6;
}

message ObjectCommitRequest {
    RequestHeader header = 15;

    bytes stream_id = 1 [(gogoproto.customtype) = "StreamID", (gogoproto.nullable) = false];

    bytes encrypted_metadata_nonce = 2 [(gogoproto.customtype) = "Nonce", (gogoproto.nullable) = false];
    bytes encrypted_metadata = 3; // TODO: set maximum size limit
    bytes encrypted_metadata_encrypted_key = 4;
}

message ObjectCommitResponse {
}

message GetPendingObjectsRequest {
    RequestHeader header = 15;
    bytes  bucket = 1;
    bytes  encrypted_path = 2;
    int32  limit = 3;
}

message GetPendingObjectsResponse {
    repeated ObjectListItem items = 1;
    bool more = 2;
}

message ListPendingObjectStreamsRequest {
    RequestHeader header = 15;
    bytes  bucket = 1;
    bytes  encrypted_path = 2;
    bytes  encrypted_cursor = 3;
    int32  limit = 4;
}

message ListPendingObjectStreamsResponse {
    repeated ObjectListItem items = 1;
    bool more = 2;
}

message ObjectGetRequest {
    RequestHeader header = 15;

    bytes  bucket = 1;
    bytes  encrypted_path = 2;
    int32  version = 3;
}

message ObjectGetResponse {
    Object object = 1;
}

message ObjectListRequest {
    RequestHeader header = 15;

    bytes  bucket           = 1;
    bytes  encrypted_prefix = 2;
    bytes  encrypted_cursor = 3;
    bool   recursive        = 4;
    int32  limit            = 5;
    Object.Status status    = 7;

    ObjectListItemIncludes object_includes = 6;
}

message ObjectListResponse {
    repeated ObjectListItem items = 1;
    bool more = 2;
}

message ObjectListItem {
    bytes  encrypted_path = 1;
    int32  version        = 2;
    Object.Status status  = 3;

    google.protobuf.Timestamp created_at = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    google.protobuf.Timestamp status_at  = 5 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    google.protobuf.Timestamp expires_at = 6 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];

    bytes  encrypted_metadata_nonce = 7 [(gogoproto.customtype) = "Nonce", (gogoproto.nullable) = false];
    bytes  encrypted_metadata       = 8;

    int64 plain_size = 10;

    bytes  stream_id = 9 [(gogoproto.customtype) = "StreamID"];
}

message ObjectListItemIncludes {
    bool metadata = 1;
}

message ObjectBeginDeleteRequest {
    RequestHeader header = 15;

    bytes  bucket = 1;
    bytes  encrypted_path = 2;
    int32  version = 3;
    int32  status = 4;
    bytes  stream_id = 5 [(gogoproto.customtype) = "StreamID", (gogoproto.nullable) = true];
}

message ObjectBeginDeleteResponse {
    bytes  stream_id = 1 [(gogoproto.customtype) = "StreamID", (gogoproto.nullable) = false];
    Object object = 2;
}

message ObjectFinishDeleteRequest {
    RequestHeader header = 15;

    bytes  stream_id = 1 [(gogoproto.customtype) = "StreamID", (gogoproto.nullable) = false];
}

message ObjectFinishDeleteResponse {
}

message ObjectGetIPsRequest {
    RequestHeader header = 15;

    bytes  bucket = 1;
    bytes  encrypted_path = 2;
    int32  version = 3;
}

message ObjectGetIPsResponse {
    repeated bytes ips = 1;
    int64 segment_count = 2;
    int64 piece_count = 3;
    int64 reliable_piece_count = 4;
}

//
// Only for satellite use
//
// TODO this needs to be removed BUT unfortunately libuplink is using it and
// we need to keep this for backward compatibility
message SatStreamID {
    google.protobuf.Timestamp creation_date = 5  [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

//---------------------------
// Segment
//---------------------------

message Segment {
    bytes stream_id = 1 [(gogoproto.customtype) = "StreamID", (gogoproto.nullable) = false];
    SegmentPosition position = 2;

    bytes encrypted_key_nonce = 3 [(gogoproto.customtype) = "Nonce", (gogoproto.nullable) = false];
    bytes encrypted_key = 4;

    int64 size_encrypted_data = 5; // refers to segment size not piece size

    bytes encrypted_inline_data = 6;
    repeated Piece pieces = 7;
}

message Piece {
    int32 piece_num = 1;
    bytes node = 2[(gogoproto.customtype) = "NodeID", (gogoproto.nullable) = false];
}

message SegmentPosition {
    int32 part_number = 1;
    int32 index = 2;
}

message SegmentBeginRequest {
    RequestHeader header = 15;

    bytes           stream_id = 1 [(gogoproto.customtype) = "StreamID", (gogoproto.nullable) = false];
    SegmentPosition position = 2;

    int64 max_order_limit = 3;
}

message SegmentBeginResponse {
    bytes                        segment_id = 1 [(gogoproto.customtype) = "SegmentID", (gogoproto.nullable) = false];
    repeated AddressedOrderLimit addressed_limits = 2;
    bytes                        private_key = 3 [(gogoproto.customtype) = "PiecePrivateKey", (gogoproto.nullable) = false];
    pointerdb.RedundancyScheme   redundancy_scheme = 4;
}

message SegmentCommitRequest {
    RequestHeader header = 15;

    bytes segment_id = 1 [(gogoproto.customtype) = "SegmentID", (gogoproto.nullable) = false];

    bytes encrypted_key_nonce = 2 [(gogoproto.customtype) = "Nonce", (gogoproto.nullable) = false];
    bytes encrypted_key = 3;

    int64 size_encrypted_data = 4; // refers to segment size not piece size
    int64 plain_size = 6;

    repeated SegmentPieceUploadResult upload_result = 5;
}

message SegmentPieceUploadResult {
    int32               piece_num = 1;
    bytes               node_id = 2 [(gogoproto.customtype) = "NodeID", (gogoproto.nullable) = false];
    orders.PieceHash    hash = 3;
}

message SegmentCommitResponse {
    int32 successful_pieces = 1;
}

message SegmentMakeInlineRequest {
    RequestHeader header = 15;

    bytes stream_id = 1 [(gogoproto.customtype) = "StreamID", (gogoproto.nullable) = false];
    SegmentPosition position = 2;

    bytes encrypted_key_nonce = 3 [(gogoproto.customtype) = "Nonce", (gogoproto.nullable) = false];
    bytes encrypted_key = 4;

    bytes encrypted_inline_data = 5;
    int64 plain_size = 6;
}

message SegmentMakeInlineResponse {}

message SegmentBeginDeleteRequest {
    RequestHeader header = 15;

    bytes stream_id = 1 [(gogoproto.customtype) = "StreamID", (gogoproto.nullable) = false];
    SegmentPosition position = 2;
}

message SegmentBeginDeleteResponse {
    bytes                           segment_id = 1 [(gogoproto.customtype) = "SegmentID", (gogoproto.nullable) = false];
    repeated AddressedOrderLimit    addressed_limits = 2;
    bytes                           private_key = 3 [(gogoproto.customtype) = "PiecePrivateKey", (gogoproto.nullable) = false];
}

message SegmentFinishDeleteRequest {
    RequestHeader header = 15;

    bytes segment_id = 1 [(gogoproto.customtype) = "SegmentID", (gogoproto.nullable) = false];
    repeated SegmentPieceDeleteResult results = 2;
}

message SegmentPieceDeleteResult {
    int32               piece_num = 1;
    bytes               node_id = 2 [(gogoproto.customtype) = "NodeID", (gogoproto.nullable) = false];
    orders.PieceHash    hash = 3;
}

message SegmentFinishDeleteResponse {}

message SegmentListRequest {
    RequestHeader header = 15;

    bytes stream_id                 = 1 [(gogoproto.customtype) = "StreamID", (gogoproto.nullable) = false];
    SegmentPosition cursor_position = 2;
    int32 limit                     = 3;
}

message SegmentListResponse {
    repeated SegmentListItem    items = 1;
    bool                        more = 2;
}

message SegmentListItem {
    SegmentPosition position = 1;
    int64 plain_size = 2;
}

message SegmentDownloadRequest {
    RequestHeader header = 15;

    bytes stream_id = 1 [(gogoproto.customtype) = "StreamID", (gogoproto.nullable) = false];
    SegmentPosition cursor_position = 2;
}

message SegmentDownloadResponse {
    bytes segment_id = 1 [(gogoproto.customtype) = "SegmentID", (gogoproto.nullable) = false];

    repeated AddressedOrderLimit addressed_limits = 2;
    bytes                        private_key = 3 [(gogoproto.customtype) = "PiecePrivateKey", (gogoproto.nullable) = false];

    bytes encrypted_inline_data = 4;
    int64 segment_size = 5;
    bytes encrypted_key_nonce = 6 [(gogoproto.customtype) = "Nonce", (gogoproto.nullable) = false];
    bytes encrypted_key = 7;

    SegmentPosition next = 8; // can be nil
}

message BatchRequest {
    RequestHeader header = 15; // the only header that matters in a batch.

    // headers for specific BatchRequestItems are ignored entirely
    repeated BatchRequestItem requests = 1;
}

message BatchRequestItem {
    oneof Request {
        BucketCreateRequest             bucket_create = 1;
        BucketGetRequest                bucket_get = 2;
        BucketDeleteRequest             bucket_delete = 3;
        BucketListRequest               bucket_list = 4;

        ObjectBeginRequest              object_begin = 6;
        ObjectCommitRequest             object_commit = 7;
        ObjectGetRequest                object_get = 8;
        ObjectListRequest               object_list = 9;
        ObjectBeginDeleteRequest        object_begin_delete = 10;
        ObjectFinishDeleteRequest       object_finish_delete = 11;
        ObjectGetIPsRequest             object_get_ips = 20;
        GetPendingObjectsRequest        pending_objects = 21;
        ListPendingObjectStreamsRequest pending_streams = 22;

        SegmentBeginRequest      segment_begin = 12;
        SegmentCommitRequest     segment_commit = 13;
        SegmentMakeInlineRequest segment_make_inline = 14;

        SegmentBeginDeleteRequest  segment_begin_delete = 15;
        SegmentFinishDeleteRequest segment_finish_delete = 16;

        SegmentListRequest     segment_list = 17;
        SegmentDownloadRequest segment_download = 18;

        RevokeAPIKeyRequest revoke_api_key = 19;

    }
}

message BatchResponse {
    repeated BatchResponseItem responses = 1;
}

message BatchResponseItem {
    oneof Response {
        BucketCreateResponse             bucket_create = 1;
        BucketGetResponse                bucket_get = 2;
        BucketDeleteResponse             bucket_delete = 3;
        BucketListResponse               bucket_list = 4;

        ObjectBeginResponse              object_begin = 6;
        ObjectCommitResponse             object_commit = 7;
        ObjectGetResponse                object_get = 8;
        ObjectListResponse               object_list = 9;
        ObjectBeginDeleteResponse        object_begin_delete = 10;
        ObjectFinishDeleteResponse       object_finish_delete = 11;
        ObjectGetIPsResponse             object_get_ips = 20;
        GetPendingObjectsResponse        pending_objects = 21;
        ListPendingObjectStreamsResponse pending_streams = 22;

        SegmentBeginResponse      segment_begin = 12;
        SegmentCommitResponse     segment_commit = 13;
        SegmentMakeInlineResponse segment_make_inline = 14;

        SegmentBeginDeleteResponse  segment_begin_delete = 15;
        SegmentFinishDeleteResponse segment_finish_delete = 16;

        SegmentListResponse     segment_list = 17;
        SegmentDownloadResponse segment_download = 18;

        RevokeAPIKeyResponse revoke_api_key = 19;
    }
}

message RevokeAPIKeyRequest {
    RequestHeader header = 15;

    bytes api_key = 1;
}

message RevokeAPIKeyResponse { }
